Remove Spotify artist API calls